--- a/platformio.ini
+++ b/platformio.ini
@@ -7,10 +7,9 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
-
-[env:megaatmega2560]
+[env:nanoatmega328]
 platform = atmelavr
-board = megaatmega2560
+board = nanoatmega328
 framework = arduino
 lib_deps = 
 	waspinator/AccelStepper@^1.64
